# Kloenk

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  index.html  kloenkie.html
.github/: dependabot.yml
.github/workflows/: deploy-client.yaml  deploy-infra.yaml  deploy-server.yaml  deploy-to-web.yaml  deploy-web.yaml
assets/: close_button.ktx2  close_button_hover.ktx2  favicon.ktx2
bg_output/: kloenk.d.ts  kloenk.wasm  kloenk_bg.wasm  kloenk_bg.wasm.d.ts
ebug/: index.html  kloenk_bin-c7f0357d43447b40a56a72c01c6e7701ddf9fcbcabb372f36fae0473c98533ffed3e63c7594dd497824d9e971e6e9e41.js
ebug/resources/web/: nginx.conf
games/kloenk/kloenk-client/: Cargo.toml  Dockerfile  build.rs
games/kloenk/kloenk-client/assets/: close_button.dds  close_button_hover.dds  close_button_test.ktx2  cursor.ktx2  cursor.rgba  favicon.rgba  gozer.gltf  grass.dds  grass.ktx2  shield.dds  shield.ktx2  sword.dds  sword.ktx2  tree.dds  tree.ktx2
games/kloenk/kloenk-client/src/: gui.rs  main.rs
games/kloenk/kloenk-client/src/application/: application_native.rs  application_web.rs  asset_loader.rs  cursor_manager.rs  framerate_handler.rs  framerate_handler_native.rs  framerate_handler_web.rs  mod.rs  update_tick_handler_native.rs
games/kloenk/kloenk-client/src/render/: camera.rs  camera_manager.rs  color_manager.rs  instance.rs  material_manager.rs  mod.rs  model.rs  model_loader.rs  model_manager.rs  preload_manager.rs  primitive_vertices_manager.rs  render.rs  render_context_manager.rs  renderer.rs  text_renderer.rs  texture.rs
games/kloenk/kloenk-client/src/render/shaders/: color_texture_shader.wgsl
games/kloenk/kloenk-client/src/run/: mod.rs  run_native.rs  run_web.rs
games/kloenk/kloenk-client/src/state/: components.rs  frame_state.rs  game_state.rs  input.rs  mod.rs  ui_state.rs  update_state.rs
games/kloenk/kloenk-client/src/systems/: camera_system.rs  chat_system.rs  close_menu_system.rs  command_handle_system.rs  cursor_manager.rs  dialogue_manager.rs  dialogue_system.rs  game_system.rs  health_system.rs  inventory_system.rs  item_pickup_system.rs  item_placement_system.rs  mod.rs  monitor_change_system.rs  movement_system.rs  object_detection_system.rs  object_selection_system.rs  position_manager.rs  storage_manager.rs
games/kloenk/kloenk-web/html/: index.html
games/pong/pong-client/: Cargo.toml
hatsu-infra/nginx/: common_headers.conf  nginx.conf
hatsu-infra/scripts/: initialize_server.sh
hydro-engine/hydro-audio/: Cargo.toml
hydro-engine/hydro-audio/src/: audio_player_native.rs  audio_player_web.rs  lib.rs
hydro-engine/hydro-core/: Cargo.toml
hydro-engine/hydro-ecs/: Cargo.toml
hydro-engine/hydro-graphics/: Cargo.toml
hydro-engine/hydro-input/: Cargo.toml
hydro-engine/hydro-ui/: Cargo.toml
hydro-engine/hydro-utils/: Cargo.toml
hydro-engine/hydro-utils/src/: resources.rs  resources_native.rs  resources_web.rs
kloenk-client/: Cargo.toml  Dockerfile
kloenk-client/src/: application.rs  main.rs
kloenk-client/src/render/: camera_manager.rs  material_manager.rs  mod.rs  model_manager.rs  render.rs  text_renderer.rs
kloenk-client/src/render/shaders/: color_shader.wgsl
kloenk-client/src/state/: input.rs  ui_state.rs
kloenk-client/src/systems/: chat_system.rs  collision_manager.rs  health_system.rs  item_placement_system.rs  mod.rs  object_detection_system.rs
kloenk-infra/: Dockerfile
kloenk-infra/nginx/: common_headers.conf  nginx.conf
kloenk-web/html/: index.html
output/: kloenk.d.ts  kloenk.js  kloenk.wasm  kloenk_bg.wasm.d.ts
resources/: gozer.gltf  gozer_kleur.gltf  kubus.gltf
resources/models/garfield/: license.txt  scene.gltf
resources/web/: common_headers.conf  nginx.conf
resources/web/html/: index.html  text.css
resources/web/nginx/: common_headers.conf  nginx.conf
scripts/: initialize_server.sh
src/: application.rs  audio_player.rs  audio_system.rs  camera.rs  collision_manager.rs  color_shader.wgsl  components.rs  cursor_manager.rs  frame_state.rs  game_state.rs  game_system.rs  gui.rs  input.rs  lib.rs  lib_bak.rs  main.rs  model.rs  render.rs  resources.rs  shader.wgsl  storage_manager.rs  text_renderer.rs  texture.rs  utility.rs
src/render/: camera.rs  instance.rs  material_manager.rs  mod.rs  model.rs  model_manager.rs  render.rs  render_context_manager.rs  text_renderer.rs  texture.rs
src/state/: components.rs  frame_state.rs  game_state.rs  input.rs  mod.rs  ui_state.rs  window_state.rs
src/systems/: audio_system.rs  camera_system.rs  chat_system.rs  close_menu_system.rs  command_handle_system.rs  dialogue_manager.rs  dialogue_system.rs  game_system.rs  health_system.rs  inventory_system.rs  item_pickup_system.rs  item_placement_system.rs  mod.rs  movement_system.rs  object_detection_system.rs  object_selection_system.rs  position_manager.rs  storage_manager.rs
web/html/: index.html
web/nginx/: common_headers.conf  nginx.conf
