[package]
name = "kloenk"
version = "0.1.0"
authors = ["Jelmer Alphenaar <https://hatsu.tech>"]
edition = "2021"
repository = "https://github.com/Jelmerta/Kloenk/"
description = "Custom Rust engine targeting WASM with WebGpu (with the dream of creating a multiplayer online game)"
license = "GPL-3.0-or-later"

[dependencies]
cfg-if = "1.0.0"
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
env_logger = { version = "0.11.5", default-features = false }
log = "0.4.22"
wgpu = { version = "22.1.0", default-features = false }
pollster = "0.3.0"
bytemuck = "1.18"
cgmath = "0.18"
anyhow = { version = "1.0.89", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
glyphon = "0.6.0"
# glob = "0.3.1"

[dependencies.image]
version = "0.25.2"
default-features = false

[build-dependencies]
anyhow = "1.0.89"
fs_extra = "1.3"
# glob = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs_extra = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = { version = "0.2.93", default-features = false }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "HtmlCanvasElement"
] }
reqwest = { version = "0.12.7", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "kloenk_bin"
path = "src/main.rs"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
strip = true
codegen-units = 1
debug = false
