[package]
name = "kloenk"
version = "0.1.0"
authors = ["Jelmer Alphenaar <https://hatsu.tech>"]
edition = "2024"
repository = "https://github.com/Jelmerta/Kloenk/"
description = "Custom Rust engine targeting WASM with WebGpu (with the dream of creating a multiplayer online game)"
license = "GPL-3.0-or-later"

[dependencies]
cfg-if = "1.0"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11"] }
env_logger = { version = "0.11", default-features = false } # Only used for dev debug logging atm
log = "0.4"
# Rodio needs to be before wgpu at the moment. Otherwise, loads incorrect windows version for wgpu due to dumb resolution behavior
rodio = { version = "0.20", default-features = false, features = ["wav"] }
wgpu = "24.0"
pollster = "0.4"
bytemuck = "1.22"
cgmath = "0.18"
anyhow = { version = "1.0", default-features = false }
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
glyphon = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
gltf = { version = "1.4" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs_extra = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "VisualViewport",
    "Element",
    "Location",
    "HtmlCanvasElement",
    "AudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "AudioBuffer",
    "AudioBufferSourceNode"
] }
reqwest = { version = "0.12", default-features = false }

[[bin]]
name = "kloenk"
path = "src/main.rs"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
debug = 1
strip = "none"
incremental = true

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
strip = true
codegen-units = 1
debug = false
