#cargo-features = ["codegen-backend"]

[package]
name = "kloenk"
version = "0.1.0"
authors = ["Jelmer Alphenaar <https://hatsu.tech>"]
edition = "2024"
repository = "https://github.com/Jelmerta/Kloenk/"
description = "Custom Rust engine targeting WASM with WebGpu (with the dream of creating a multiplayer online game)"
license = "GPL-3.0-or-later"

[dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06"] } # TODO are these features needed for both desktop and web? I think x11 feature is needed for linux? , "x11"
env_logger = { version = "0.11", default-features = false } # Only used for dev debug logging atm maybe make a dev flag
log = "0.4" # Info logging. Maybe also behind a flag?
bytemuck = "1.23"
cgmath = "0.18"
anyhow = { version = "1.0", default-features = false }
glyphon = { git = "https://github.com/grovesNL/glyphon.git" }
gltf = { version = "1.4", default-features = false, features = ["utils", "names"] } # "KHR_materials_variants"] }
ddsfile = "0.5" # already quite minimal, but could make a small reader to just get data i need out

hydrox = { git = "https://github.com/Jelmerta/Hydrox.git" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "26.0", default-features = false, features = ["vulkan"] }
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
#console_error_panic_hook = "0.1"
#console_log = "1.0"
wgpu = { version = "26.0", default-features = false, features = ["webgpu"] }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [# todo check which are not needed
    "Document",
    "Window",
    "VisualViewport",
    "Element",
    "Location",
    "HtmlCanvasElement",
] }
reqwest = { version = "0.12", default-features = false }

[[bin]]
name = "kloenk"
path = "src/main.rs"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
debug = 1
strip = "none"
incremental = true
#codegen-backend = "cranelift"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
strip = false
codegen-units = 1
debug = true
#lto = false TODO temp added debug information to profile build in production
#strip = true
#debug = "none"

[profile.release.package."*"]
opt-level = "z"
strip = true
codegen-units = 1
#debug = "none" TODO tmp disabled to show debug profiling
debug = true
