[package]
name = "pong-client"
version = "0.1.0"
authors = ["Jelmer Alphenaar <https://hatsu.tech>"]
edition = "2024"
repository = "https://github.com/Jelmerta/Kloenk/"
description = "Pong implemented with custom Hydrox game engine"
license = "GPL-3.0-or-later"

[dependencies]
hydrox = { git = "https://github.com/Jelmerta/Hydrox.git" }

[[bin]]
name = "pong"
path = "src/main.rs"